--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,23 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
-:root {
-  --d: 700ms;
-  --e: cubic-bezier(0.2, 1, 0.15, 1);
-  --font-sans: "Nunito";
-}
+// @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+// :root {
+//   --d: 700ms;
+//   --e: cubic-bezier(0.2, 1, 0.15, 1);
+//   --font-sans: "Nunito";
+// }
 
 * {
   box-sizing: border-box;
 }
 
 html, body {
-  height: 100%;
+  height: 100vh;
 }
 
-body {
-  display: grid;
-  place-items: center
+.root {
+  margin: 0px;
+  padding: 0px;
+}
+.page-content{
+  display:block;
+
 }
 
-.cover{
-  width: 100px;
+.header {
+  position:fixed;
+  top:0px;
+  left:0px;
+  right:0px;
+  height:100px;
+  z-index:1;
+  background-color:#cdcdcd;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  
+}
+
+.content{ 
+  margin: 100px;
 }
