--- a/src/components/List/list.scss
+++ b/src/components/List/list.scss
@@ -2,12 +2,14 @@
     .card {
         width: 100vw;
         min-width: 300px;
+        margin: 10px;
     }
 }
 
 @media (min-width: 601px) and (max-width: 960px) {
     .card {
         width: 47vw;
+        margin: 10px;
     }
 }
 
@@ -15,23 +17,37 @@
     .card {
         width: 17vw;
         min-width: 300px;
+        margin: 15px;
     }
 }
 
 .audiobooks {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
+.card-body {
+    display: flex;
+    flex-flow: column;
+    margin: 10px;
+ }
+.card-title {
+    font-size: medium;
+}
+.card-subtitle {
+    font-size: medium;
+}
+.card-text {
+    font-size: small;
+}
 .cover {
     display:block;
     width:100%;
-    img {
-        
+    img {    
         width:100px;
     }
 }
-
 /* .audiobooks{
     display:flex;
     flex-wrap: wrap;
