--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -53,17 +53,16 @@ html, body {
   right:0px;
   height: 72px;
   z-index:1;
-  background: rgb(2, 15, 192);
-background: linear-gradient(
-  90deg, 
-rgba(2,15,192,1) 0%, 
-rgba(9,121,101,1) 52%, 
-rgba(0,212,255,1) 100%);
+  background: linear-gradient(
+    to top,
+    rgba(0,0,13,0.85), 
+    rgba(0,0,13,1)
+  );
   display: flex;
   align-items: center;
   justify-content: center;
 
-  *{
+  .search-box{
     margin:0 10px 0 10px;
 
   }
@@ -77,4 +76,5 @@ rgba(0,212,255,1) 100%);
   font-size: larger;
   font-weight: 400;
   color: white;
+  margin-top: .5rem;
 } 
